[package]
name = "brb_algo_at2"
version = "0.1.0"
authors = ["David Rusu <davidrusu.me@gmail.com>"]
edition = "2018"
license = "MIT OR BSD-3-Clause"

[dependencies]
crdts = "4.0.0"
brb = { git = "https://github.com/dan-da/brb.git", package="brb", branch="dyn_membership_changes" }
serde = "1.0.106"

[profile.test]
# Property testing is a power hungry beast, we need to go as fast as we can
opt-level = 3
lto = "fat" # noticed a very significant speed up from enabling lto, perf improvement of 1m33s -> 10s
incremental = false
